--- a/story.html
+++ b/story.html
@@ -34,6 +34,63 @@
   </head>
   <body>
     <header>
+      <div class="topbar container">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <div class="logo">
+              <img
+                src=""
+                alt=""
+                srcset=""
+                style="height: 80px; width: 100px; background: blue;"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-menu container-fluid p-0">
+        <div class="row">
+          <div class="col-12">
+            <ul
+              class="nav d-flex justify-content-center align-items-center"
+              style="background: aquamarine;"
+            >
+              <li>
+                <a class="nav-link active" href="./index.html">Trang chủ</a>
+              </li>
+              <li>
+                <a class="nav-link" href="./story.html"
+                  >Câu chuyện thương hiệu</a
+                >
+              </li>
+              <li>
+                <a
+                  class="nav-link hover-menu"
+                  data-toggle="collapse"
+                  aria-expanded="false"
+                  >Menu
+                </a>
+                <ul class="submenu">
+                  <li>
+                    <a class="nav-link" href="#">
+                      Menu 1
+                    </a>
+                  </li>
+                  <li>
+                    <a class="nav-link" href="#">
+                      Menu 2
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="nav-link" href="#">Tin tức - Tuyển dụng</a></li>
+              <li><a class="nav-link" href="#">Hệ thống chi nhánh</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -50,7 +107,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </section>
     <section>
       <div class="container">
         <div class="row">
