--- a/product-detail.html
+++ b/product-detail.html
@@ -30,59 +30,259 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./product-detail.css" />
+    <script src="./style.js"></script>
     <script src="./carousel.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <section>
-      <div class="container">
+    <header>
+      <div class="topbar container">
         <div class="row">
           <div
-            class="col-12 col-lg-4 d-flex justify-content-center align-items-center"
+            class="col-4 col-lg-4 col-md-4 d-flex justify-content-center header"
           >
-            <img
-              src="https://via.placeholder.com/300"
-              class="img-fluid"
-              alt="..."
-            />
+            <div class="menu-mobile d-block d-lg-none d-md-none">
+              <i
+                class="fa fa-bars"
+                aria-hidden="true"
+                class="icon-hamburger"
+                onclick="activeMenu()"
+                style="font-size: 24px;"
+              ></i>
+              <div class="menu">
+                <div class="text-right mx-3 my-2">
+                  <i
+                    class="fas fa-times"
+                    onclick="activeMenu()"
+                    aria-hidden="true"
+                    class="icon-hamburger"
+                    style="color: white;"
+                  ></i>
+                </div>
+                <ul>
+                  <li>
+                    <a class="nav-link text-center" href="/index.html"
+                      >Trang chủ</a
+                    >
+                  </li>
+                  <li>
+                    <a class="nav-link text-center" href="/story.html"
+                      >Câu chuyện thương hiệu</a
+                    >
+                  </li>
+                  <li><a class="nav-link text-center" href="#">Menu</a></li>
+                  <li><a class="nav-link text-center" href="#">Menu 1</a></li>
+                  <li><a class="nav-link text-center" href="#">Menu 2</a></li>
+                  <li>
+                    <a class="nav-link text-center" href="#"
+                      >Tin tức - Tuyển dụng</a
+                    >
+                  </li>
+                  <li>
+                    <a class="nav-link text-center" href="#"
+                      >Hệ thống chi nhánh</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="header-left ml-3">
+              <a href="/index.html">
+                <img
+                  class="logo-img"
+                  src="https://static1.squarespace.com/static/55174098e4b01b711315abe8/597df0b1d7bdce037b2cf99d/59ca9e58e3df2804c6da2eb4/1506454420482/Allison-Meadows.png?format=1500w"
+                  alt=""
+                  srcset=""
+                />
+              </a>
+            </div>
           </div>
-          <div class="col -12 col-lg-8">
+          <div class="col-8 text-right my-auto">
             <div class="row">
-              <div class="col-12">
-                <h3>
-                  Kem sữa chua
-                </h3>
+              <div class="col-12 d-none d-lg-block">
+                <a
+                  href="https://www.google.com/maps/place/144+Nguy%E1%BB%85n+Th%C3%A1i+B%C3%ACnh,+Ph%C6%B0%E1%BB%9Dng+Nguy%E1%BB%85n+Th%C3%A1i+B%C3%ACnh,+Qu%E1%BA%ADn+1,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.7680175,106.6981547,21z/data=!4m5!3m4!1s0x31752f3fdd1f40ab:0xaa77c41df7fb8ded!8m2!3d10.768064!4d106.698237"
+                  class="mr-3"
+                  target="_blank"
+                >
+                  <i
+                    class="fas fa-map-marker-alt"
+                    aria-hidden="true"
+                    data-selected="true"
+                    data-label-id="0"
+                  ></i>
+                  144 Nguyễn Thái Bình, p. Nguyễn Thái Bình, Q.1, HCM</a
+                >
+                <a href="#">
+                  <i
+                    class="far fa-envelope"
+                    aria-hidden="true"
+                    data-selected="true"
+                    data-label-id="0"
+                  ></i>
+                  hotro@b-boy.com</a
+                >
               </div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum."
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12">34.000</div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                <button>
-                  <i class="fab fa-facebook-messenger"></i> Mua ngay
-                </button>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                <span>Đặt hàng nhanh, gọi số: 037 333 5217</span>
+              <div class="col-12 phone-header">
+                <a href="tel:+8490454656">
+                  <i
+                    class="fas fa-phone-alt mr-1"
+                    aria-hidden="true"
+                    data-selected="true"
+                    data-label-id="0"
+                  ></i>
+                  090454656</a
+                >
+                <a href="tel:+8484657888">
+                  <i
+                    class="fas fa-phone-alt mr-1"
+                    aria-hidden="true"
+                    data-selected="true"
+                    data-label-id="0"
+                  ></i>
+                  084657888</a
+                >
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="main-menu container-fluid p-0 d-none d-lg-block d-md-block">
+        <div class="row">
+          <div class="col-12">
+            <ul
+              class="nav d-flex justify-content-center align-items-center"
+              style="background: aquamarine;"
+            >
+              <li><a class="nav-link" href="/index.html">Trang chủ</a></li>
+              <li>
+                <a class="nav-link" href="/story.html"
+                  >Câu chuyện thương hiệu</a
+                >
+              </li>
+              <li>
+                <a
+                  class="nav-link hover-menu"
+                  href="#"
+                  data-toggle="collapse"
+                  aria-expanded="false"
+                  >Menu
+                </a>
+                <ul class="submenu">
+                  <li>
+                    <a class="nav-link" href="#">
+                      Menu 1
+                    </a>
+                  </li>
+                  <li>
+                    <a class="nav-link" href="#">
+                      Menu 2
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="nav-link" href="#">Tin tức - Tuyển dụng</a></li>
+              <li><a class="nav-link" href="#">Hệ thống chi nhánh</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section id="slide">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 p-0">
+            <!-- carousel -->
+            <div
+              id="carouselExampleControls"
+              class="carousel slide mb-3 carousel-custom"
+              data-ride="carousel"
+            >
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <script>
+              const topCarousel = document.querySelector(
+                "#carouselExampleControls"
+              );
+              createCarousel(topCarousel);
+            </script>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container-fluid" style="background-color: #f7f7f7;">
+        <div class="row">
+          <div class="container pt-3 pb-3">
+            <div class="row">
+              <div
+                class="col-12 col-lg-4 d-flex justify-content-center align-items-center"
+              >
+                <img
+                  src="https://via.placeholder.com/300"
+                  class="img-fluid"
+                  alt="..."
+                  style="width: 100%; height: auto;"
+                />
+              </div>
+              <div class="col-12 col-lg-8 detail-content">
+                <h1 class="product-title">
+                  Kem sữa chua
+                </h1>
+                <p>
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum."
+                </p>
+                <div>
+                  <span class="mr-3" style="color: blue;">34.000</span
+                  ><del style="color: blue;">34.000</del>
+                </div>
+
+                <button class="select-btn mt-3 mb-3">
+                  <i class="fab fa-facebook-messenger"></i> Mua ngay
+                </button>
+                <span style="pb-3"
+                  >Đặt hàng nhanh, gọi số: <b>037 333 5217</b></span
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <hr />
     </section>
 
@@ -94,15 +294,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 p-0">
             <!--Carousel Wrapper-->
             <div
               id="multi-item-example"
-              class="carousel slide carousel-multi-item my-5"
+              class="carousel slide carousel-multi-item mb-5"
               data-ride="carousel"
             >
               <!--Indicators-->
-              <ol class="carousel-indicators">
+              <ol class="carousel-indicators round-indicators">
                 <li
                   data-target="#multi-item-example"
                   data-slide-to="0"
@@ -119,31 +319,56 @@
               );
               createMultiItemsCarousel(multiItemsCarousel);
             </script>
+
             <!--/.Carousel Wrapper-->
           </div>
         </div>
       </div>
     </section>
+    <!--Product Intro-->
+    <div class="container-fluid product-intro mb-5">
+      <div class="row">
+        <div class="container product-intro-content">
+          <div class="row">
+            <div class="col-12 col-lg-8">
+              <h2 class="intro-title">b-boy sữa chua trân châu</h2>
+              <div class="intro-border"></div>
+
+              <p class="intro-detail">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                dignissimos perferendis odio ea officiis ipsa molestias omnis
+                dicta animi tempora dolor ab, delectus in fuga, fugiat iusto
+                ipsam voluptates consequuntur.
+              </p>
+              <div class="intro-border"></div>
+            </div>
+            <div class="col-lg-4 intro-img">
+              <img
+                class="intro-img img-fluid"
+                src="https://bit.ly/3aq7NBb"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6">
-            <div class="row">
-              <div class="col-12">
-                <h3>Yogurt</h3>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-1">
-                <i
-                  class="fas fa-map-marker-alt"
-                  aria-hidden="true"
-                  data-selected="true"
-                  data-label-id="0"
-                ></i>
-              </div>
-              <div class="col-11">
+          <div class="col-12 col-lg-6 mb-3">
+            <h3>YOGURT</h3>
+            <div class="d-flex align-items-center">
+              <i
+                class="fas fa-map-marker-alt mr-3"
+                aria-hidden="true"
+                data-selected="true"
+                data-label-id="0"
+                style="color: blue;"
+              ></i>
+
+              <p>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -151,18 +376,18 @@
                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum."
-              </div>
+              </p>
             </div>
-            <div class="row">
-              <div class="col-1">
-                <i
-                  class="fas fa-phone-alt"
-                  aria-hidden="true"
-                  data-selected="true"
-                  data-label-id="0"
-                ></i>
-              </div>
-              <div class="col-11">
+            <div class="d-flex align-items-center">
+              <i
+                class="fas fa-phone-alt mr-3"
+                aria-hidden="true"
+                data-selected="true"
+                data-label-id="0"
+                style="color: blue;"
+              ></i>
+
+              <p>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -170,34 +395,40 @@
                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum."
-              </div>
+              </p>
+            </div>
+            <div class="d-flex align-items-center">
+              <i
+                class="far fa-envelope mr-3"
+                aria-hidden="true"
+                data-selected="true"
+                data-label-id="0"
+                style="color: blue;"
+              ></i>
+
+              <span>
+                test@gmail.com
+              </span>
             </div>
           </div>
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-6 mb-33">
             <div class="row">
-              <div class="col-12">
-                <h3>Mạng xã hội</h3>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-3">
-                <div class="text-center">
-                  <i class="fab fa-twitter"></i>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <i class="fab fa-facebook"></i>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <i class="fab fa-instagram"></i>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <i class="fab fa-pinterest"></i>
+              <div class="col-12 col-lg-6">
+                <h3>MẠNG XÃ HỘI</h3>
+                <div class="d-flex icon-wraper">
+                  <div class="icon-container">
+                    <a href="#"> <i class="fab fa-twitter"></i></a>
+                  </div>
+
+                  <div class="icon-container">
+                    <a href="#"> <i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="icon-container">
+                    <a href="#"> <i class="fab fa-instagram"></i></a>
+                  </div>
+                  <div class="icon-container">
+                    <a href="#"> <i class="fab fa-pinterest"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
