Add carousel button for product detail

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                   href="https://www.google.com/maps/place/144+Nguy%E1%BB%85n+Th%C3%A1i+B%C3%ACnh,+Ph%C6%B0%E1%BB%9Dng+Nguy%E1%BB%85n+Th%C3%A1i+B%C3%ACnh,+Qu%E1%BA%ADn+1,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.7680175,106.6981547,21z/data=!4m5!3m4!1s0x31752f3fdd1f40ab:0xaa77c41df7fb8ded!8m2!3d10.768064!4d106.698237"
                   class="mr-3"
                   target="_blank"
+                  rel="noopener noreferrer"
                 >
                   <i
                     class="fas fa-map-marker-alt"
@@ -699,63 +700,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- nav bar -->
-    <!-- nav bar mobile -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarTogglerDemo03"
-        aria-controls="navbarTogglerDemo03"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="#">Navbar</a>
-
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 main-menu"></ul>
-      </div>
-    </nav>
-
-    <script>
-      const menus = [
-        {
-          name: "Trang chủ",
-          link: "#"
-        },
-        {
-          name: "Câu chuyện thương hiệu",
-          link: "#"
-        },
-        {
-          name: "Menu",
-          link: "#"
-        },
-        {
-          name: "Tin tức - Tuyển dụng",
-          link: "#"
-        },
-        {
-          name: "Hệ thống chi nhánh",
-          link: "#"
-        }
-      ];
-      const mainMenu = document.querySelector(".main-menu");
-      menus.map((menu) => {
-        const node = document.createElement("LI");
-        node.className = "nav-item active";
-        const menuLink = document.createElement("a");
-        menuLink.className = "nav-link";
-        menuLink.href = menu.link;
-        menuLink.innerText = menu.name;
-        node.appendChild(menuLink);
-        mainMenu.appendChild(node);
-      });
-    </script> -->
   </body>
 
   <a
