--- a/product-detail.html
+++ b/product-detail.html
@@ -31,6 +31,7 @@
     />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="./product-detail.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./style.js"></script>
     <script src="./carousel.js"></script>
     <link
@@ -153,7 +154,7 @@
       </div>
       <div class="main-menu container-fluid p-0 d-none d-lg-block d-md-block">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 p-0">
             <ul
               class="nav d-flex justify-content-center align-items-center"
               style="background: aquamarine;"
@@ -252,25 +253,51 @@
           <div class="col-12 p-0">
             <!--Carousel Wrapper-->
             <div
-              id="multi-item-example"
-              class="carousel slide carousel-multi-item mb-5"
-              data-ride="carousel"
+              id="multi-item-all"
+              class="carousel slide carousel-multi-item my-5"
+              data-interval="false"
             >
               <!--Indicators-->
-              <ol class="carousel-indicators">
+              <ol class="carousel-indicators round-indicators">
                 <li
-                  data-target="#multi-item-example"
+                  data-target="#multi-item-all"
                   data-slide-to="0"
                   class="active"
                 ></li>
-                <li data-target="#multi-item-example" data-slide-to="1"></li>
-                <li data-target="#multi-item-example" data-slide-to="2"></li>
+                <li data-target="#multi-item-all" data-slide-to="1"></li>
+                <li data-target="#multi-item-all" data-slide-to="2"></li>
               </ol>
               <!--/.Indicators-->
+              <div>
+                <a
+                  class="carousel-control-prev"
+                  href="#multi-item-all"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <i
+                    class="fas fa-chevron-left"
+                    style="font-size: 24px; color: black;"
+                  ></i>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#multi-item-all"
+                  role="button"
+                  data-slide="next"
+                >
+                  <i
+                    class="fas fa-chevron-right"
+                    style="font-size: 24px; color: black;"
+                  ></i>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             </div>
             <script>
               const multiItemsCarousel = document.querySelector(
-                ".carousel-multi-item"
+                "#multi-item-all"
               );
               createMultiItemsCarousel(multiItemsCarousel);
             </script>
