--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-12 d-flex align-items-center justify-content-center
+                  <div class="col-12 d-flex align-items-center justify-content-center">
                     <!--Carousel Wrapper-->
                     <a class="" href="#multi-item-all" role="button" data-slide="prev">
                       <i class="fas fa-chevron-left" style="font-size: 24px; color: black"></i>
